k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dogtrainer-backend
  labels:
    app: dogtrainer-backend
spec:
  type: ClusterIP
  selector:
    app: dogtrainer-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
